--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ibrahim Parvez Thamimul Ansari
-#logo: /assets/img/headshot_circle.png
+logo: /assets/img/new.jpg
 description: Engineer | Developer
 # show_downloads: true
 theme: jekyll-theme-minimal
