--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ibrahim Parvez Thamimul Ansari
 logo: /assets/img/new.jpg
-description: Engineer | Developer
+# description: Engineer | Developer
 # show_downloads: true
 theme: jekyll-theme-minimal
